feat: added status check by admins